--- a/data_cleaning_practice/practice_solution.ipynb
+++ b/data_cleaning_practice/practice_solution.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/acastellanos-ie/machine_learning_2/blob/master/data_cleaning_practice/practice_solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1/blob/main/data_cleaning_practice/practice_solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -56,9 +56,9 @@
         "id": "19ecQfLVZGvm"
       },
       "source": [
-        "repository_url = 'https://github.com/acastellanos-ie/machine_learning_2'"
+        "repository_url = 'https://github.com/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1'"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -68,19 +68,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0bce4768-c133-425f-9007-514b8f187b8f"
+        "outputId": "020ac788-3ffd-4e5d-89ae-88406bdcf9ec"
       },
       "source": [
         "! git clone $repository_url"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'machine_learning_2'...\n",
-            "fatal: could not read Username for 'https://github.com': No such device or address\n"
+            "Cloning into 'ML2-MBD-EN-OCT-2021-S-1'...\n",
+            "remote: Enumerating objects: 52, done.\u001b[K\n",
+            "remote: Counting objects: 100% (52/52), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (45/45), done.\u001b[K\n",
+            "remote: Total 52 (delta 9), reused 42 (delta 3), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (52/52), done.\n"
           ]
         }
       ]
@@ -97,13 +101,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Dy8O4JuL00hJ"
+        "id": "Dy8O4JuL00hJ",
+        "outputId": "add83259-700e-4439-a987-8dee2071765e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "! pip install -Uqqr machine_learning_2/requirements.txt"
+        "! pip install -Uqqr ML2-MBD-EN-OCT-2021-S-1/requirements.txt"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 84 kB 2.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 11.2 MB 18.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 15.7 MB 26.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 11.3 MB 29.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 261 kB 60.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 62 kB 727 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 25.3 MB 1.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 173.5 MB 9.3 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 46 kB 3.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 884 kB 69.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 303 kB 67.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.1 MB 21.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 102 kB 9.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 675 kB 56.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 10.1 MB 30.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 62 kB 816 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 596 kB 67.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 812 kB 50.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 38.1 MB 1.5 MB/s \n",
+            "\u001b[?25h  Building wheel for htmlmin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for dtreeviz (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for imagehash (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "yellowbrick 1.3.post1 requires numpy<1.20,>=1.16.0, but you have numpy 1.21.4 which is incompatible.\n",
+            "google-colab 1.0.0 requires pandas~=1.1.0; python_version >= \"3.0\", but you have pandas 1.3.5 which is incompatible.\n",
+            "google-colab 1.0.0 requires requests~=2.23.0, but you have requests 2.26.0 which is incompatible.\n",
+            "datascience 0.10.6 requires folium==0.2.1, but you have folium 0.8.3 which is incompatible.\n",
+            "albumentations 0.1.12 requires imgaug<0.2.7,>=0.2.5, but you have imgaug 0.2.9 which is incompatible.\u001b[0m\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -118,13 +161,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IPNxL2Vsch3w"
+        "id": "IPNxL2Vsch3w",
+        "outputId": "110c461a-117c-4946-9260-ebb3d9d6865d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "%cd machine_learning_2/data_cleaning_practice"
+        "%cd ML2-MBD-EN-OCT-2021-S-1/data_cleaning_practice"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/ML2-MBD-EN-OCT-2021-S-1/data_cleaning_practice\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -163,7 +218,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2627,7 +2682,7 @@
         "# Transform (i.e., Impute the null values) the training dataset according to the learned statistics (i.e., mean of the column)\n",
         "imp.transform(X_train)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2670,7 +2725,7 @@
         "# Uses the same Imputer strategy to impute the null values in the test dataset\n",
         "print(imp.transform(X_test))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2777,7 +2832,7 @@
         "imp = IterativeImputer(max_iter=10, random_state=0)\n",
         "imp.fit(X_train)\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2812,7 +2867,7 @@
         "# the model learns that the second feature is double the first\n",
         "print(np.round(imp.transform(X_test)))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2860,7 +2915,7 @@
         "imputer = KNNImputer(n_neighbors=2, weights=\"uniform\")\n",
         "imputer.fit_transform(X)\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2912,7 +2967,7 @@
         "mask_missing_values_only = indicator.fit_transform(X)\n",
         "mask_missing_values_only  "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2950,7 +3005,7 @@
       "source": [
         "indicator.features_\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2988,7 +3043,7 @@
         "mask_all = indicator.fit_transform(X)\n",
         "mask_all"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3016,7 +3071,7 @@
       "source": [
         "indicator.features_"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3062,7 +3117,7 @@
         "mask = np.random.randint(0, 2, size=X.shape).astype(bool)\n",
         "X[mask] = np.nan"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3086,7 +3141,7 @@
         "        ('features', SimpleImputer(strategy='mean')),\n",
         "        ('indicators', MissingIndicator())])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3112,7 +3167,7 @@
         "clf = make_pipeline(transformer, LogisticRegression(max_iter=1000))\n",
         "print(\"AVG accuracy = {:.2}\".format(np.mean(cross_val_score(clf, X, y, cv=5))))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3146,7 +3201,7 @@
         "print(\"AVG accuracy = {:.2}\".format(np.mean(cross_val_score(clf, X, y, cv=5))))\n",
         "  "
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
