--- a/data_cleaning_practice/practice_solution.ipynb
+++ b/data_cleaning_practice/practice_solution.ipynb
@@ -2520,7 +2520,7 @@
         "# split into input and output elements\n",
         "X, y = data[:, :-1], data[:, -1]"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -2539,7 +2539,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZKG5WnyMuKGV",
-        "outputId": "44beb021-ae09-4cd5-fcac-9a8c1c63fdc0"
+        "outputId": "a9bad131-4082-4199-b333-4b3c5f1c709e"
       },
       "source": [
         "from sklearn.model_selection import cross_val_score\n",
@@ -2548,7 +2548,7 @@
         "pipe = make_pipeline(LinearRegression())\n",
         "print(\"Baseline model with RMSE = {:.2}\".format(-np.mean(cross_val_score(pipe, X, y, cv=5, scoring= \"neg_root_mean_squared_error\"))))\n"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -2588,7 +2588,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S-C467iCvJYi",
-        "outputId": "6b5531d9-42b9-4d6e-e309-35dd2a644748"
+        "outputId": "3ca0a02c-3e2b-4129-c40a-a1e89d1f83b2"
       },
       "source": [
         "from sklearn.ensemble import IsolationForest\n",
@@ -2609,14 +2609,14 @@
         "  pipe = make_pipeline(LinearRegression())\n",
         "  print(\"RMSE = {:.2}\".format(-np.mean(cross_val_score(pipe, X_without_outliers, y_withouth_outliers, cv=5, scoring= \"neg_root_mean_squared_error\"))))\n"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "RMSE = 4.9\n",
-            "RMSE = 8.7\n",
+            "RMSE = 7.4\n",
             "RMSE = 7.2\n",
             "RMSE = 4.4\n"
           ]
@@ -2679,7 +2679,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nFTZS9A6LFEa",
-        "outputId": "80e9e188-4c42-4591-caa1-b5851eed3850"
+        "outputId": "808fb1ff-bfcf-4f00-9883-ce45b2f0b56d"
       },
       "source": [
         "import numpy as np\n",
@@ -2694,7 +2694,7 @@
         "# Transform (i.e., Impute the null values) the training dataset according to the learned statistics (i.e., mean of the column)\n",
         "imp.transform(X_train)"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2706,7 +2706,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 31
         }
       ]
     },
@@ -2729,7 +2729,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7V9sbKEjLKna",
-        "outputId": "41c3aebb-2029-4ef2-fa94-53455b27b42b"
+        "outputId": "5c3298d9-1732-4274-ce01-9dc4881b626f"
       },
       "source": [
         "X_test = [[np.nan, 2], [6, np.nan], [7, 6]]\n",
@@ -2737,7 +2737,7 @@
         "# Uses the same Imputer strategy to impute the null values in the test dataset\n",
         "print(imp.transform(X_test))"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -2781,7 +2781,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J5CaLZnOLqxx",
-        "outputId": "879efdb8-ece8-426c-9a9f-6f46276069b2"
+        "outputId": "3f29fd7b-d8d6-4647-bb73-41885cb0e78a"
       },
       "source": [
         "import pandas as pd\n",
@@ -2793,7 +2793,7 @@
         "imp = SimpleImputer(strategy=\"most_frequent\")\n",
         "print(imp.fit_transform(df))"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -2827,7 +2827,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2f85f081-2a6a-4c6c-ca6d-763407a24637"
+        "outputId": "b340bcf7-17db-4d12-a084-eb61a0779221"
       },
       "source": [
         "import numpy as np\n",
@@ -2844,22 +2844,17 @@
         "imp = IterativeImputer(max_iter=10, random_state=0)\n",
         "imp.fit(X_train)\n"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "IterativeImputer(add_indicator=False, estimator=None,\n",
-              "                 imputation_order='ascending', initial_strategy='mean',\n",
-              "                 max_iter=10, max_value=None, min_value=None,\n",
-              "                 missing_values=nan, n_nearest_features=None, random_state=0,\n",
-              "                 sample_posterior=False, skip_complete=False, tol=0.001,\n",
-              "                 verbose=0)"
+              "IterativeImputer(random_state=0)"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 34
         }
       ]
     },
@@ -2870,7 +2865,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c5ae0285-9f32-424e-dc25-b939844a24d3"
+        "outputId": "d05eb831-c96a-419d-c24c-8bb9a468f0ae"
       },
       "source": [
         "\n",
@@ -2879,7 +2874,7 @@
         "# the model learns that the second feature is double the first\n",
         "print(np.round(imp.transform(X_test)))"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -2917,7 +2912,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f9682e8-6901-4173-db5f-425f5e92f180"
+        "outputId": "fce8fb87-aadb-4d0d-e5cc-9c517d16ff20"
       },
       "source": [
         "import numpy as np\n",
@@ -2927,7 +2922,7 @@
         "imputer = KNNImputer(n_neighbors=2, weights=\"uniform\")\n",
         "imputer.fit_transform(X)\n"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2940,7 +2935,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 36
         }
       ]
     },
@@ -2966,7 +2961,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ad00e5fa-8712-467f-ce23-b8d6dbb2b814"
+        "outputId": "8ba18485-1bfa-430e-a4c4-2541ba896479"
       },
       "source": [
         "from sklearn.impute import MissingIndicator\n",
@@ -2979,7 +2974,7 @@
         "mask_missing_values_only = indicator.fit_transform(X)\n",
         "mask_missing_values_only  "
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2991,7 +2986,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 37
         }
       ]
     },
@@ -3012,12 +3007,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4335d549-65ed-4dc6-9289-2c56eaf7c6b2"
+        "outputId": "58dce9a2-9a23-4ff0-ad9d-4b3560c34f51"
       },
       "source": [
         "indicator.features_\n"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3027,7 +3022,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 38
         }
       ]
     },
@@ -3048,14 +3043,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "32ae3115-778d-4bed-b50e-25a4f24ba00c"
+        "outputId": "da3c9695-fdfa-4a91-fdf5-e2412e366bfe"
       },
       "source": [
         "indicator = MissingIndicator(missing_values=-1, features=\"all\")\n",
         "mask_all = indicator.fit_transform(X)\n",
         "mask_all"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3067,7 +3062,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 39
         }
       ]
     },
@@ -3078,12 +3073,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2284c86-b048-4a20-f9a3-f80b251274d2"
+        "outputId": "a383993f-e455-4ba6-f6b6-3644f7d569f6"
       },
       "source": [
         "indicator.features_"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3093,7 +3088,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 40
         }
       ]
     },
@@ -3129,7 +3124,7 @@
         "mask = np.random.randint(0, 2, size=X.shape).astype(bool)\n",
         "X[mask] = np.nan"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -3153,7 +3148,7 @@
         "        ('features', SimpleImputer(strategy='mean')),\n",
         "        ('indicators', MissingIndicator())])"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -3173,19 +3168,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KHJUlk2m_Oqs",
-        "outputId": "79394bd6-9017-46e9-95ed-089028771667"
+        "outputId": "8d3ba2c9-af76-4bc8-a556-3e91315d8f4a"
       },
       "source": [
         "clf = make_pipeline(transformer, LogisticRegression(max_iter=1000))\n",
         "print(\"AVG accuracy = {:.2}\".format(np.mean(cross_val_score(clf, X, y, cv=5))))"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "AVG accuracy = 0.81\n"
+            "AVG accuracy = 0.75\n"
           ]
         }
       ]
@@ -3206,20 +3201,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l7I0Sod8L4g_",
-        "outputId": "fed3caa5-3c65-42af-fb3f-cf836ebe5188"
+        "outputId": "3685d3e9-1280-4f29-9a97-67e07c77c4d2"
       },
       "source": [
         "clf = make_pipeline(SimpleImputer(strategy='mean'), LogisticRegression(max_iter=1000))\n",
         "print(\"AVG accuracy = {:.2}\".format(np.mean(cross_val_score(clf, X, y, cv=5))))\n",
         "  "
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "AVG accuracy = 0.78\n"
+            "AVG accuracy = 0.73\n"
           ]
         }
       ]
