--- a/data_cleaning_practice/practice_solution.ipynb
+++ b/data_cleaning_practice/practice_solution.ipynb
@@ -162,6 +162,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Data Cleaning Practice"
+      ],
+      "metadata": {
+        "id": "Kqw67SSNoDqL"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "T6rPx_b2c43D"
       },
