--- a/naive_bayes_practice/practice_proposal.ipynb
+++ b/naive_bayes_practice/practice_proposal.ipynb
@@ -58,7 +58,7 @@
       "source": [
         "repository_url = 'https://github.com/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1'"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
       "source": [
         "! git clone $repository_url"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
       "source": [
         "! pip install -Uqqr ML2-MBD-EN-OCT-2021-S-1/requirements.txt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
       "source": [
         "%cd ML2-MBD-EN-OCT-2021-S-1/naive_bayes_practice"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,19 +205,6 @@
             "/content/ML2-MBD-EN-OCT-2021-S-1/naive_bayes_practice\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SKqBBIxf03lS"
-      },
-      "source": [
-        "Ensure that you have the GPU runtime activated:\n",
-        "\n",
-        "![](https://miro.medium.com/max/3006/1*vOkqNhJNl1204kOhqq59zA.png)\n",
-        "\n",
-        "Now you have everything you need to execute the code in Colab"
       ]
     },
     {
@@ -235,8 +222,7 @@
         "id": "hj-rVLo9Te7t",
         "outputId": "3d517b2e-a324-45eb-c540-a7e09545ed4e",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -254,7 +240,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore') # Do not print warning messages"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -291,7 +277,7 @@
         "import pandas as pd\n",
         "import math"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -368,7 +354,7 @@
         "appFile = pd.read_csv(\"data/appFreqs.csv\", header=None, names=[\"word\", \"frequency\"])\n",
         "otherFile = pd.read_csv(\"data/otherFreqs.csv\", header=None, names=[\"word\", \"frequency\"])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -384,7 +370,7 @@
       "source": [
         "appFile"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +510,7 @@
         "appFile['probability'] = appFile.frequency.apply(lambda x: math.log(x/appTotal))\n",
         "otherFile['probability'] = otherFile.frequency.apply(lambda x: math.log(x/otherTotal))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +526,7 @@
       "source": [
         "appFile.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -655,7 +641,7 @@
         "    \n",
         "get_w_prob(\"#al\", appFile)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +680,7 @@
         "otherPrior = math.log(len(otherFile) / (len(appFile) + len(otherFile))) # Number of Tweets in other File / Total number of Tweets (sum of the number of tweets in both files)\n",
         "print(\"The prior of tweets NOT belonging to the app is ={0:.2f}\".format(math.exp(otherPrior)))\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +715,7 @@
       "source": [
         "test = pd.read_csv(\"data/test.csv\", header = None, names=[\"label\", \"content\"])"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -778,7 +764,7 @@
         "        print()\n",
         "        pred.append(\"OTHER\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -877,7 +863,7 @@
         "cm = confusion_matrix(test.label, pred)\n",
         "sn.heatmap(cm, annot=True, cmap=plt.cm.Blues);\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
