Update the repo

--- a/evaluation_metrics_practice/practice_proposal.ipynb
+++ b/evaluation_metrics_practice/practice_proposal.ipynb
@@ -55,9 +55,10 @@
         "id": "19ecQfLVZGvm"
       },
       "source": [
-        "repository_url = 'https://github.com/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1'"
+        "repository_name = \"machine_learning_2\"\n",
+        "repository_url = 'https://github.com/acastellanos-ie/' + repository_name"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +73,7 @@
       "source": [
         "! git clone $repository_url"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,9 +108,9 @@
         }
       },
       "source": [
-        "! pip install -Uqqr ML2-MBD-EN-OCT-2021-S-1/requirements.txt"
+        "! pip install -Uqqr $repository_name/requirements.txt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,9 +195,9 @@
         }
       },
       "source": [
-        "%cd ML2-MBD-EN-OCT-2021-S-1/evaluation_metrics_practice"
+        "%cd $repository_name/evaluation_metrics_practice"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,19 +206,6 @@
             "/content/ML2-MBD-EN-OCT-2021-S-1/evaluation_metrics_practice\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SKqBBIxf03lS"
-      },
-      "source": [
-        "Ensure that you have the GPU runtime activated:\n",
-        "\n",
-        "![](https://miro.medium.com/max/3006/1*vOkqNhJNl1204kOhqq59zA.png)\n",
-        "\n",
-        "Now you have everything you need to execute the code in Colab"
       ]
     },
     {
@@ -257,7 +245,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore') # Do not print warning messages"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -330,7 +318,7 @@
         "df = pd.read_csv(\"data/titanic.csv\", sep=\";\")\n",
         "df.dtypes"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -380,7 +368,7 @@
         "\n",
         "df.dtypes"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +424,7 @@
         "del df['cabin']\n",
         "del df['ticket']"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -460,7 +448,7 @@
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +493,7 @@
         "df['age'] = df['age'].replace(np.nan, df[\"age\"].mean())\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +544,7 @@
         "df.dropna(inplace=True)\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -613,7 +601,7 @@
         "\n",
         "    return train_test_split(X, y, test_size=1-percentage, random_state=seed)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -633,7 +621,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = split_df(df, seed=100)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -672,7 +660,7 @@
         "predictions = pd.DataFrame({'survived':y_test, 'pred':probs})\n",
         "predictions.head()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +775,7 @@
         "cm = confusion_matrix(predictions.survived, [pred>threshold for pred in predictions.pred])\n",
         "sn.heatmap(cm, annot=True, cmap=plt.cm.Blues);\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -833,7 +821,7 @@
         "    cm = confusion_matrix(predictions.survived, [pred>threshold for pred in predictions.pred])\n",
         "    return cm[1,1]/sum(cm[1,:])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -848,7 +836,7 @@
       "source": [
         "print(\"TPR = {}\".format(tpr(predictions, threshold)))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -878,7 +866,7 @@
         "    cm = confusion_matrix(predictions.survived, [pred>threshold for pred in predictions.pred])\n",
         "    return cm[0,1]/sum(cm[0,:])"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -893,7 +881,7 @@
       "source": [
         "print(\"FPR = {}\".format(fpr(predictions, threshold)))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,7 +911,7 @@
         "    cm = confusion_matrix(predictions.survived, [pred>threshold for pred in predictions.pred])\n",
         "    return cm[0,1] * fp_cost + cm[1,0] * fn_cost"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -938,7 +926,7 @@
       "source": [
         "print(\"Cost = {}\".format(cost(predictions, threshold)))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -979,7 +967,7 @@
         "\n",
         "fpr, tpr, thresholds = roc_curve(predictions.survived, predictions.pred)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1006,7 +994,7 @@
         "plt.show()\n",
         "\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1042,7 +1030,7 @@
         "from importlib import reload \n",
         "reload(plt);"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1065,7 +1053,7 @@
         "sns.distplot([p for label, p in predictions.values if label == 1.0], hist = False, kde = True, kde_kws = {'shade': True, 'linewidth': 3, 'kernel': 'gau'}, label = \"Survived\", color='Green')\n",
         "sns.distplot([p for label, p in predictions.values if label == 0.0], hist = False, kde = True, kde_kws = {'shade': True, 'linewidth': 3, 'kernel': 'gau'}, label = \"Not Survived\", color='Red');"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
