Update the repo

--- a/data_cleaning_practice/practice_solution.ipynb
+++ b/data_cleaning_practice/practice_solution.ipynb
@@ -56,7 +56,8 @@
         "id": "19ecQfLVZGvm"
       },
       "source": [
-        "repository_url = 'https://github.com/acastellanos-ie/ML2-MBD-EN-OCT-2021-S-1'"
+        "repository_name = \"ML2-MBD-EN-OCT-2021-S-1\"\n",
+        "repository_url = 'https://github.com/acastellanos-ie/' + repository_name"
       ],
       "execution_count": 1,
       "outputs": []
@@ -68,7 +69,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "48cfecb6-51f9-4bfb-9ba1-bb694727c3c7"
+        "outputId": "1caf5ad4-ea2c-4a45-ca4d-5af96e11be29"
       },
       "source": [
         "! git clone $repository_url"
@@ -80,11 +81,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'ML2-MBD-EN-OCT-2021-S-1'...\n",
-            "remote: Enumerating objects: 62, done.\u001b[K\n",
-            "remote: Counting objects: 100% (62/62), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (55/55), done.\u001b[K\n",
-            "remote: Total 62 (delta 15), reused 39 (delta 3), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (62/62), done.\n"
+            "remote: Enumerating objects: 110, done.\u001b[K\n",
+            "remote: Counting objects: 100% (110/110), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (103/103), done.\u001b[K\n",
+            "remote: Total 110 (delta 37), reused 38 (delta 3), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (110/110), 18.32 MiB | 10.99 MiB/s, done.\n",
+            "Resolving deltas: 100% (37/37), done.\n"
           ]
         }
       ]
@@ -108,9 +110,9 @@
         "outputId": "79a954b5-2376-4b46-b59b-d463ec092530"
       },
       "source": [
-        "! pip install -Uqqr ML2-MBD-EN-OCT-2021-S-1/requirements.txt"
+        "! pip install -Uqqr $repository_name/requirements.txt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,12 +188,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6cb469c4-5089-4a56-e1f2-e56f9968bfa9"
+        "outputId": "da2a027e-fbfc-4e78-8edd-920a70569626"
       },
       "source": [
-        "%cd ML2-MBD-EN-OCT-2021-S-1/data_cleaning_practice"
+        "%cd $repository_name/data_cleaning_practice"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +228,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +336,7 @@
         "    ax.xaxis.set_ticks_position('bottom')\n",
         "    ax.yaxis.set_ticks_position('left')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -395,7 +397,7 @@
         "plt.scatter(X_test[:, 0], X_test[:, 1], marker='^', c='r', label=\"test set\", s=60)\n",
         "plt.legend(loc='upper left');\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -449,7 +451,7 @@
         "plt.scatter(X_test_scaled[:, 0], X_test_scaled[:, 1], marker='^', c='r', label=\"test set\", s=60);\n",
         "plt.legend(loc='upper left');"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -502,7 +504,7 @@
         "plt.scatter(X_test_scaled_badly[:, 0], X_test_scaled_badly[:, 1], marker='^', c='r', label=\"test set\", s=60)\n",
         "plt.legend(loc='upper left');"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -544,7 +546,7 @@
         "pipe.fit(X_train_scaled, y_train)  \n",
         "pipe.score(X_test_scaled, y_test) "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +573,7 @@
         "pipe.fit(X_train_scaled, y_train)  \n",
         "pipe.score(X_test_scaled_badly, y_test) "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,7 +627,7 @@
         "scaler.fit(X)\n",
         "X_scaled = scaler.transform(X)\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -656,7 +658,7 @@
         "    ax.hist(X_scaled[:, i], bins=30)\n",
         "    ax.set_title(\"{}: {}\".format(i, X.columns[i]))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -707,7 +709,7 @@
         "    ax.hist(X_pt[:, i], bins=30)\n",
         "    ax.set_title(\"{}: {} {:.2f}\".format(i, X.columns[i], pt.lambdas_[i]))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -748,7 +750,7 @@
         "scores = cross_val_score(RidgeCV(), X, y, cv=10)\n",
         "np.mean(scores), np.std(scores)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -775,7 +777,7 @@
         "scores = cross_val_score(RidgeCV(), X_scaled, y, cv=10)\n",
         "np.mean(scores), np.std(scores)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -802,7 +804,7 @@
         "scores = cross_val_score(RidgeCV(), X_pt, y, cv=10)\n",
         "np.mean(scores), np.std(scores)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +860,7 @@
         "                   'vegan': ['No', 'No','No','Yes', 'Yes', 'No']})\n",
         "df"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -972,7 +974,7 @@
         "df = df[['boro', 'boro_ordinal', 'vegan', 'salary']]\n",
         "df"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1101,7 +1103,7 @@
       "source": [
         "pd.get_dummies(df)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1248,7 +1250,7 @@
         "ce = OneHotEncoder().fit(df)\n",
         "ce.transform(df).toarray()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1300,7 +1302,7 @@
         "# Define a pipeline with the pre-processing and the LogReg model\n",
         "model = make_pipeline(preprocess, LogisticRegression())"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1327,7 +1329,7 @@
         "X = data.frame.drop(['date', 'price'], axis=1)\n",
         "y = target"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1346,7 +1348,7 @@
         "ax = sns.boxplot(x=data.frame.zipcode, y=data.frame.price)\n",
         "ax.set_xticklabels(ax.get_xticklabels(), rotation=90);"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1386,7 +1388,7 @@
       "source": [
         "pd.get_dummies(X.zipcode)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2343,7 +2345,7 @@
         "\n",
         "X[['zipcode', 'zipcode_transformed']]"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2481,7 +2483,7 @@
         "\n",
         "pipe_target = make_pipeline(TargetEncoder(cols='zipcode'), Ridge())"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2529,7 +2531,7 @@
         "# split into input and output elements\n",
         "X, y = data[:, :-1], data[:, -1]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2557,7 +2559,7 @@
         "pipe = make_pipeline(LinearRegression())\n",
         "print(\"Baseline model with RMSE = {:.2}\".format(-np.mean(cross_val_score(pipe, X, y, cv=5, scoring= \"neg_root_mean_squared_error\"))))\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2618,7 +2620,7 @@
         "  pipe = make_pipeline(LinearRegression())\n",
         "  print(\"RMSE = {:.2}\".format(-np.mean(cross_val_score(pipe, X_without_outliers, y_withouth_outliers, cv=5, scoring= \"neg_root_mean_squared_error\"))))\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2703,7 +2705,7 @@
         "# Transform (i.e., Impute the null values) the training dataset according to the learned statistics (i.e., mean of the column)\n",
         "imp.transform(X_train)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2746,7 +2748,7 @@
         "# Uses the same Imputer strategy to impute the null values in the test dataset\n",
         "print(imp.transform(X_test))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2802,7 +2804,7 @@
         "imp = SimpleImputer(strategy=\"most_frequent\")\n",
         "print(imp.fit_transform(df))"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2853,7 +2855,7 @@
         "imp = IterativeImputer(max_iter=10, random_state=0)\n",
         "imp.fit(X_train)\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2883,7 +2885,7 @@
         "# the model learns that the second feature is double the first\n",
         "print(np.round(imp.transform(X_test)))"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2931,7 +2933,7 @@
         "imputer = KNNImputer(n_neighbors=2, weights=\"uniform\")\n",
         "imputer.fit_transform(X)\n"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2983,7 +2985,7 @@
         "mask_missing_values_only = indicator.fit_transform(X)\n",
         "mask_missing_values_only  "
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3021,7 +3023,7 @@
       "source": [
         "indicator.features_\n"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3059,7 +3061,7 @@
         "mask_all = indicator.fit_transform(X)\n",
         "mask_all"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3087,7 +3089,7 @@
       "source": [
         "indicator.features_"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3133,7 +3135,7 @@
         "mask = np.random.randint(0, 2, size=X.shape).astype(bool)\n",
         "X[mask] = np.nan"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3157,7 +3159,7 @@
         "        ('features', SimpleImputer(strategy='mean')),\n",
         "        ('indicators', MissingIndicator())])"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3183,7 +3185,7 @@
         "clf = make_pipeline(transformer, LogisticRegression(max_iter=1000))\n",
         "print(\"AVG accuracy = {:.2}\".format(np.mean(cross_val_score(clf, X, y, cv=5))))"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3217,7 +3219,7 @@
         "print(\"AVG accuracy = {:.2}\".format(np.mean(cross_val_score(clf, X, y, cv=5))))\n",
         "  "
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
